data/derived/sp14/progs/unify/prog0353.ml.out
Characters 15-16:
  let _ = 5.4 *. 4;;
                 ^
Error: This expression has type int but an expression was expected of type
         float
